# megamol

./: vcpkg.json
cmake/vcpkg_ports/voro/: portfile.cmake  vcpkg.json
plugins/datatools/include/datatools/clustering/: DBSCAN.h  ParticleIColClustering.h
plugins/datatools/src/clustering/: ParticleIColClustering.cpp
plugins/geometry_calls/src/: VolumetricDataCall.cpp
plugins/mmadios/src/: ADIOSFlexConvert.cpp  ADIOSFlexConvert.h
plugins/trialvolume/: CMakeLists.txt
plugins/trialvolume/include/trialvolume/: BaseParticleToVolume.h  GraphCall.h  GraphData.h  GraphTsvWriter.h  MeshSegmentationCall.h  ParticleClusterTracking.h  ParticleToVolume.h  TrackingData.h  VolumeClusterTracking.h  vtrFileReader.h
plugins/trialvolume/src/: BaseParticleToVolume.cpp  DualContouring.cpp  DualContouring.h  GraphCall.cpp  GraphCall.h  GraphDotWriter.cpp  GraphDotWriter.h  GraphTsvWriter.cpp  IdentityToICol.cpp  IdentityToICol.h  MeshSegmentation.cpp  MeshSegmentation.h  MeshSegmentationCall.cpp  MeshSegmentationCall.h  ParticleClusterTracking.cpp  ParticleClusterTracking.h  ParticleToVolume.cpp  ParticleToVolume.h  SegmentationAnalysis.cpp  SegmentationAnalysis.h  VolumeClusterTracking.cpp  VolumeSegmentation.cpp  VolumeSegmentation.h  trialvolume.cpp  vtrFileReader.cpp  vtrFileReader.h
plugins/trialvolume_gl/: CMakeLists.txt
plugins/trialvolume_gl/shaders/trialvolume_gl/: bbox.frag.glsl  bbox.geom.glsl  bbox.vert.glsl  lines.frag.glsl  lines.geom.glsl  lines.vert.glsl  splat_volume.comp.glsl
plugins/trialvolume_gl/src/: ParticleToVolumeGL.cpp  ParticleToVolumeGL.h  TrackingGraphRenderer.cpp  TrackingGraphRenderer.h  trialvolume_gl.cpp
